--- a/docs/assets/css/docs.css
+++ b/docs/assets/css/docs.css
@@ -126,7 +126,6 @@ section {
 
 /* Subnav */
 .subhead .nav {
-  padding: 0 10px;
   background-color: #eeeeee; /* Old browsers */
   background-repeat: repeat-x; /* Repeat the gradient */
   background-image: -moz-linear-gradient(top, #f5f5f5 0%, #eeeeee 100%); /* FF3.6+ */
@@ -136,7 +135,7 @@ section {
   background-image: -o-linear-gradient(top, #f5f5f5 0%,#eeeeee 100%); /* Opera 11.10+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', endColorstr='#eeeeee',GradientType=0 ); /* IE6-9 */
   background-image: linear-gradient(top, #f5f5f5 0%,#eeeeee 100%); /* W3C */
-  border: 1px solid #eee;
+  border: 1px solid #e5e5e5;
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
           border-radius: 4px;
@@ -145,6 +144,9 @@ section {
   margin: 0;
   padding-top: 11px;
   padding-bottom: 11px;
+  font-size: 13px;
+  border-left: 1px solid #f5f5f5;
+  border-right: 1px solid #e5e5e5;
   -webkit-border-radius: 0;
      -moz-border-radius: 0;
           border-radius: 0;
@@ -152,6 +154,15 @@ section {
 .subhead .nav .active a {
   background-color: #fff;
   color: #333;
+}
+.subhead .nav li:first-child a {
+  border-left: 0;
+  -webkit-border-radius: 4px 0 0 4px;
+     -moz-border-radius: 4px 0 0 4px;
+          border-radius: 4px 0 0 4px;
+}
+.subhead .nav li:last-child a {
+  border-right: 0;
 }
 
 
@@ -247,16 +258,19 @@ section {
   height: auto;
   margin-left: auto;
   margin-right: auto;
-  line-height: 21px;
+  font-family: Menlo, Monaco, "Courier New", monospace;
+  font-size: 12px;
+  line-height: 20px;
   white-space: nowrap;
   overflow: hidden;
+  background-color: #f5f5f5;
   /* Makes inputs behave like true block-level elements */
   -webkit-box-sizing: border-box; /* Older Webkit */
      -moz-box-sizing: border-box; /* Older FF */
       -ms-box-sizing: border-box; /* IE8 */
           box-sizing: border-box; /* CSS3 spec*/
   /* Hacks for IE7 to make this work just okay enough to function */
-  *width: 270px;
+  *width: 80%;
   *height: 24px;
 }
 
